--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,5 @@
 ﻿Leandro
- - In-process network implementation
+ [DONE] - In-process network implementation
  - Exception Handler - Rename to "Monitor". API must be something like turnOn(warning), turnOff(warning). Not just like a "logger" API.  
  - Brick Directory Structure - Simplify. Discuss with Klaus. Move each brick to its own structure.
  - Proactivity - Pick something from Klaus's todo list.
