--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,6 @@
 ﻿Leandro
- [DONE] - In-process network implementation
- - Exception Handler - Rename to "Monitor". API must be something like turnOn(warning), turnOff(warning). Not just like a "logger" API.  
+ - In-process network implementation
+ - Exception Handler - Rename to "BlinkingLights". API must be something like turnOn("Message") returns Light, Light.turnOff(). Not just like a "logger" API.  
  - Brick Directory Structure - Simplify. Discuss with Klaus. Move each brick to its own structure.
  - Proactivity - Pick something from Klaus's todo list.
 
@@ -13,10 +13,12 @@ ongoing - Component Model (see todoLego.txt)
  - Auto-update of Kernel from Peers
  - Publish, Download, Auto-Update of Bricks from Peers
  - GUI - Spartan interface for what we have so far. http://c2.com/cgi/wiki?SpartanUserInterface 
+ - Logging - revise how logging is done by all bricks
  - Make build.xml run again. 
  - Update sourcepath, classpath, main class and build.xml references in README.txt.
 RELEASE===================================================
  - Contact Navigation
+ - Connection Encryption
 
 
 Gandhi
