--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,6 @@
 ﻿Leandro
- - In-process network implementation
+[DONE] - In-process network - implement
+ - InternetAddressKeeper - implement
  - Exception Handler - Rename to "BlinkingLights". API must be something like turnOn("Message") returns Light, Light.turnOff(). Not just like a "logger" API.
  - Brick Directory Structure - Simplify. Discuss with Klaus. Move each brick to its own structure.
  - Proactivity - Pick something from Klaus's todo list.
@@ -15,8 +16,8 @@ ongoing - Component Model (see todoLego.txt)
  - GUI - Spartan interface for what we have so far. http://c2.com/cgi/wiki?SpartanUserInterface 
  - Logging - revise how logging is done by all bricks
  - Make build.xml run again. 
- - Update sourcepath, classpath, main class and build.xml references in README.txt.
-RELEASE===================================================
+ - README.txt - Update sourcepath, classpath, main class and build.xml references
+RELEASE BETA===================================================
  - Contact Navigation
  - Connection Encryption
 
