--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,7 @@
 ﻿Leandro
 [DONE] - In-process network - implement
  - InternetAddressKeeper - implement
+ - KeyManager - implement
  - Exception Handler - Rename to "BlinkingLights". API must be something like turnOn("Message") returns Light, Light.turnOff(). Not just like a "logger" API.
  - Brick Directory Structure - Simplify. Discuss with Klaus. Move each brick to its own structure.
  - Proactivity - Pick something from Klaus's todo list.
@@ -20,7 +21,7 @@ ongoing - Component Model (see todoLego.txt)
 RELEASE BETA===================================================
  - Contact Navigation
  - Connection Encryption
-
+ - UDP instead of TCP
 
 Gandhi
 done - Make build class for Sneer
