--- a/todo.txt
+++ b/todo.txt
@@ -1,10 +1,10 @@
 ﻿Leandro
-[DONE] - In-process network - implement
- - InternetAddressKeeper - implement
- - KeyManager - implement
- - Exception Handler - Rename to "BlinkingLights". API must be something like turnOn("Message") returns Light, Light.turnOff(). Not just like a "logger" API.
+ [DONE] - In-process network - implement
+ [DONE/in memory]- InternetAddressKeeper - implement
+ [DONE/in memory] - KeyManager - implement
+ [STARTED] - Exception Handler - Rename to "BlinkingLights". API must be something like turnOn("Message") returns Light, Light.turnOff(). Not just like a "logger" API.
  - Brick Directory Structure - Simplify. Discuss with Klaus. Move each brick to its own structure.
- - Proactivity - Pick something from Klaus's todo list.
+ - Proactivity - Pick something from KTlaus's todo list.
 
 Klaus
 ongoing - Component Model (see todoLego.txt)
