done merging brick directories
git-svn-id: https://sovereigncomputing.net/svn/sneer/trunk@1440 ee3b4d21-14f5-0310-a1fa-c5d8b2925ec4

--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,6 @@
 ﻿Leandro
  [DONE/revise in the future] - Exception Handler - Rename to "BlinkingLights". API must be something like turnOn("Message") returns Light, Light.turnOff(). Not just like a "logger" API.
- - Brick Directory Structure - Simplify. Discuss with Klaus. Move each brick to its own structure.
+ [DONE] - Brick Directory Structure - Simplify. Discuss with Klaus. Move each brick to its own structure.
  - Brick Publish:
 	1) gui asks for brick interface
 	2) search brick implementation (public impl inside impl/)
