--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,5 @@
 ﻿Leandro
- - Refactor: Unpollute functional.freedom* packages: move all adapter stuff to the functional.adapter package or subpackages.
+ [DONE] - Refactor: Unpollute functional.freedom* packages: move all adapter stuff to the functional.adapter package or subpackages.
  - Refactor: Move all tests that are in the form: bricks.xyz.tests.* and that depend on the implementation, to bricks.xyz.impl.tests.*. Nothing inside the brick api package or subpackages can depend on the implementation. Make interface tests abstract using the techniques you have already seen in this project. :)
  - Cleanup: Output to Console during Test Execution - Leave off by default. Tests should run clean. Turn on when needed only.
  - Serializable Instrumentation: Remove "implements Serializable" from SignalSubscription and run Freedom2Test. Make container use Bamboo's classloader contrib to fix NotSerializableException being thrown.
