using FileClassLoader to instrument classes on-the-fly
git-svn-id: https://sovereigncomputing.net/svn/sneer/trunk@1511 ee3b4d21-14f5-0310-a1fa-c5d8b2925ec4

--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,5 @@
 ﻿Leandro
- - Serializable Instrumentation: Remove "implements Serializable" from SignalSubscription and run Freedom2Test. Make container use Bamboo's classloader contrib to fix NotSerializableException being thrown.
+ [DONE] - Serializable Instrumentation: Remove "implements Serializable" from SignalSubscription and run Freedom2Test. Make container use Bamboo's classloader contrib to fix NotSerializableException being thrown.
  - Brick Publish:
 	1) Inform source folder (src).
 	2) Inform library folder (lib).
