Freedom2Test progress.
git-svn-id: https://sovereigncomputing.net/svn/sneer/trunk@1522 ee3b4d21-14f5-0310-a1fa-c5d8b2925ec4

--- a/todo.txt
+++ b/todo.txt
@@ -20,9 +20,10 @@
 
 Klaus
 ongoing - Component Model (see todoLego.txt)
- - Warnings - clean them all.
  - Freedom2Test - Make it pass with new bricks.
+ - Warnings - clean them all.
  - SocketAccepter.lastAcceptedSocket() - Refactor to void acceptedSocketServer(Omnivore<ByteArraySocket>). There will only be one instead of many receivers. Simplifies the impl of SocketAccepter. 
+ - Signal type-safety - Not string-based.
  - Brick persistence
  - Public Keys
  - Connection Encryption
