finished performance improvements
git-svn-id: https://sovereigncomputing.net/svn/sneer/trunk@1541 ee3b4d21-14f5-0310-a1fa-c5d8b2925ec4

--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,5 @@
 ﻿Leandro
- - Test Performance - Study what the hell is going on :)
+ [DONE] - Test Performance - Study what the hell is going on :)
  - Brick Publish:
 	1) Inform source folder (src).
 	2) Inform library folder (lib).
