git-svn-id: https://sovereigncomputing.net/svn/sneer/trunk@1608 ee3b4d21-14f5-0310-a1fa-c5d8b2925ec4

--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,5 @@
 ﻿Leandro
+ - rename methods on Crypto to digest() and digester()
  - Brick Publish:
 	1) Inform source folder (src).
 	2) Inform library folder (lib).
