PublicKeys starting to replace Nickmanes under the hood.
git-svn-id: https://sovereigncomputing.net/svn/sneer/trunk@1621 ee3b4d21-14f5-0310-a1fa-c5d8b2925ec4

--- a/todo.txt
+++ b/todo.txt
@@ -27,6 +27,8 @@ Leandro Reminder
 
 Klaus
 ongoing - Component Model (see todoLego.txt)
+ - KeyManager.addKey() - Refactor to use same idiom as partyGiven() with factory.
+ - KeyManager <-> Mesh dependency cycle - Eliminate.
  - ListSource and Impl - Rename to ListRegister.
  - RemoteSignals - Test with different signals, not only name.
  - Signal type-safety - Not string-based.
