Refactoring Startable to static injection where applicable.
git-svn-id: https://sovereigncomputing.net/svn/sneer/trunk@1656 ee3b4d21-14f5-0310-a1fa-c5d8b2925ec4

--- a/todo.txt
+++ b/todo.txt
@@ -40,9 +40,10 @@ ongoing - Component Model (see todoLego.txt)
  - Package namespace - revise sneer.lego? sneer.kernel? sneer.bricks? - Consider using kernel, pulp and skin.
  - Make build.xml run again. 
  - README.txt - Update sourcepath, classpath, main class and build.xml references
-RELEASE BETA===================================================
+RELEASE ===================================================
  - Traffic Prioritization - Among signals and among contacts.
  - KeyManager <-> Mesh dependency cycle - Eliminate.
+ - "Interface.allImplementors()" - Simplify use by injecting a SetSignal with all Bricks that implement a non-brick interface defined by another brick.  
  - UDP instead of TCP
 
 Gandhi
