--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,5 @@
 ﻿﻿Leandro
+ - Replace dependency on Injector with @Inject static field in Deployer brick. I did that for all my brick and it worked (Klaus).
  - Fix or delete each broken Junit test in project.
  - rename methods on Crypto to digest() and digester()
  - Brick Publish:
