--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,6 @@
 ﻿﻿Leandro
  - Replace dependency on Injector with @Inject static field in Deployer brick. I did that for all my brick and it worked (Klaus).
+ - Eliminate Startable - Ask me how :)
  - Fix or delete each broken Junit test in project.
  - rename methods on Crypto to digest() and digester()
  - Brick Publish:
