--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,9 @@
 ﻿﻿Leandro
+ - rename Sneer1024 to PublicKey and move it to KeyManagerBrick
+ - include author's pk into brick hashcode
+ - use brick hashcode as key on BrickManager 
  - Replace dependency on Injector with @Inject static field in Deployer brick. I did that for all my brick and it worked (Klaus).
- - Eliminate Startable - Ask me how :)
+ - Eliminate Startable and Injector - Ask me how :)
  - Fix or delete each broken Junit test in project.
  - rename methods on Crypto to digest() and digester()
  - Brick Publish:
