--- a/todo.txt
+++ b/todo.txt
@@ -1,12 +1,12 @@
 ﻿﻿Leandro
- - rename Sneer1024 to PublicKey and move it to KeyManagerBrick
+ [DONE] - rename Sneer1024 to PublicKey and move it to KeyManagerBrick
  - include author's pk into brick hashcode
  - use brick hashcode as key on BrickManager 
  - Replace dependency on Injector with @Inject static field in Deployer brick. I did that for all my brick and it worked (Klaus).
  - Eliminate Startable and Injector - Ask me how :)
  - Fix or delete each broken Junit test in project.
  - rename methods on Crypto to digest() and digester()
- - Brick Publish:
+ [Almost DONE] - Brick Publish:
 	1) Inform source folder (src).
 	2) Inform library folder (lib).
 	3) Find all interfaces that extend Brick inside src.
@@ -22,14 +22,13 @@
 			Deploy is not allowed in this case.
 	8) deploy brick to sneer home ($USER_HOME/.sneer/)
  - Logging - Find a way that the Looger brick can configured via API without having to use the log4j properties file. 
- - Proactivity: Pick something from Klaus's todo list.
  
 Leandro Reminder 
- - compilar com libs
- - incluir apis no classpath dos bricks instalados anteriormente
+ [DONE] - compilar com libs
+ [DONE] - incluir apis no classpath dos bricks instalados anteriormente
  - hash com libs
  - brick registry (guarda hash e os jars)
- - analizar dependencias injetadas 
+ [DONE] - analizar dependencias injetadas 
 
 Klaus
 ongoing - Component Model (see todoLego.txt)
