--- a/todo.txt
+++ b/todo.txt
@@ -5,7 +5,7 @@
  - Replace dependency on Injector with @Inject static field in Deployer brick. I did that for all my brick and it worked (Klaus).
  - Eliminate Startable and Injector - Ask me how :)
  - Fix or delete each broken Junit test in project.
- - rename methods on Crypto to digest() and digester()
+ [DONE] - rename methods on Crypto to digest() and digester()
  [Almost DONE] - Brick Publish:
 	1) Inform source folder (src).
 	2) Inform library folder (lib).
