fixed or removed broken teste
git-svn-id: https://sovereigncomputing.net/svn/sneer/trunk@1689 ee3b4d21-14f5-0310-a1fa-c5d8b2925ec4

--- a/todo.txt
+++ b/todo.txt
@@ -4,7 +4,7 @@
  - use brick hashcode as key on BrickManager 
  - Replace dependency on Injector with @Inject static field in Deployer brick. I did that for all my brick and it worked (Klaus).
  - Eliminate Startable and Injector - Ask me how :)
- - Fix or delete each broken Junit test in project.
+ [DONE] - Fix or delete each broken Junit test in project.
  [DONE] - rename methods on Crypto to digest() and digester()
  [Almost DONE] - Brick Publish:
 	1) Inform source folder (src).
