- refactored injector code. Preparing the road to StaticFieldInjector - more tasks on my todo
git-svn-id: https://sovereigncomputing.net/svn/sneer/trunk@1696 ee3b4d21-14f5-0310-a1fa-c5d8b2925ec4

--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,6 @@
 ﻿﻿Leandro
+ - create new test runner that uses our own classloader so we can replace the AnnotatedFieldInjector by the StaticFieldInjector
+ - check file locks on windows (FileUtils.cleanDirectory() "unable to delete file")
  [DONE] - rename Sneer1024 to PublicKey and move it to KeyManagerBrick
  - include author's pk into brick hashcode
  - use brick hashcode as key on BrickManager 
