Things spike started.
git-svn-id: https://sovereigncomputing.net/svn/sneer/trunk@1725 ee3b4d21-14f5-0310-a1fa-c5d8b2925ec4

--- a/todo.txt
+++ b/todo.txt
@@ -27,6 +27,7 @@ Leandro Reminder
  - brick registry (guarda hash e os jars)
 
 Klaus
+contacts() - change from ListSignal to SetSignal.
 ongoing - Component Model (see todoLego.txt)
  - GUI - Spartan interface for what we have so far. http://c2.com/cgi/wiki?SpartanUserInterface 
  - RemoteSignals - Test with different signals, not only name.
@@ -80,8 +81,8 @@ GiveNTake
     - Publisher/Announcer/Author - The sovereign party responsible for this thing.
     - Name - For listing. Considered part of the description when searching, maybe with a higher weighting.
     - Description - Free text.
-      - Location? Street Addresses? GPS Coordinates?
-      - Attributes? Price, Weight, etc?
+    - Attributes? Price, Weight, etc?
+    - Location? Street Addresses? GPS Coordinates?
     - Photos? Other Media?
     - Comments by others?
 
