broken in more bricks
git-svn-id: https://sovereigncomputing.net/svn/sneer/trunk@1755 ee3b4d21-14f5-0310-a1fa-c5d8b2925ec4

--- a/todo.txt
+++ b/todo.txt
@@ -5,6 +5,7 @@
  	1) Dashboard Menu
  	2) Internal Window Actions (expand brick, brick menu and remove brick, like google desktop).
  	3) Layout Support for Internal Windows (Size, Resize and Position).
+ - Refactoring wheel.io.ui.Action to support Signals
  - Resizeable JWindow, instead of switching JFrame <-> JWindow.
 
 ﻿Leandro
